--- a/assets/scss/module/_brick.scss
+++ b/assets/scss/module/_brick.scss
@@ -3,25 +3,24 @@
 /* brick */
 
 .brick {
-  margin: $margin * 2 $margin;
-  padding: $margin;
-  background: $colorKey;
+  margin: $space * 2 $space;
+  padding: $space;
   border-radius: $radius;
 
-  @media #{$bpSmall} {
-    margin: $margin - 1px 0;
+  @include bp(sp) {
+    margin: $space - 1px 0;
     padding: 1px 0;
     border-radius: 0;
   }
 }
 
-@media #{$bpMediumOver} {
+@include bp(sp) {
   .row .brick {
-    margin: $margin $margin;
+    margin: $space $space;
   }
 }
 
-@media #{$bpMediumUnder} {
+@include bp(sp) {
   .row > [class^='col'] + [class^='col'] > .brick {
     margin-top: 0;
   }
