[update]baseの不要コメント削除

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -1,15 +1,5 @@
 @charset "utf-8";
-/*
- * KUZIRA CSS Framework
- * version: 1.1.1
- *
- * Copyright (c) 2010 Yutaka Sumi
- * Dual licensed under the MIT or GPL Version 2 licenses.
- *
- * Date: 2010-10-26
- */
-
-/* ------------------------------------------------------------ normalize */
+// normalize
 html {
   overflow-y: scroll;
 }
