--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,13 +1,13 @@
 @charset "utf-8";
 
-/* header */
-
-header.global {
+// globalHeader
+.globalHeader {
   position: sticky;
   top: 0;
+}
 
-  &--native {
-    @extend .global;
-    padding-top: env(safe-area-inset-top);
-  }
+// nativeHeader
+.nativeHeader {
+  @extend .globalHeader;
+  padding-top: env(safe-area-inset-top);
 }
