[add]Thumbnailコンポーネントの追加

--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -29,6 +29,11 @@ $spaceL: 24px;
 $spaceXL: 40px;
 $spaceXXL: 64px;
 
+// size
+$sizeS: 24px;
+$size: 48px;
+$sizeL: 96px;
+
 // line-height
 $lineHeightXS: 1.2;
 $lineHeightS: 1.4;
